resolved issue with align-items in header

--- a/index.sass
+++ b/index.sass
@@ -42,6 +42,7 @@ header
 
     .container
         justify-content: space-between
+        align-items: center
 
     .logo
         text-decoration: none
